src/sass/60_components/_components.text.scss
.c-text {
  $c-text: &;

  &.--text-align-left {
  }
  &.--text-align-center {
  }

  &__container {
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    @include media-breakpoint-up(lg) {
      gap: 2.5rem;
    }
  }

  &__row {
    justify-content: center;
    gap: 1.5rem;

    .--text-align-left & {
    }
    .--text-align-center & {
      justify-content: center;
      text-align: center;
    }

    @include media-breakpoint-up(xl) {
      gap: 0;
    }
  }

  &__columns {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    @include media-breakpoint-up(lg) {
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: center;
      gap: 0;
    }
    .--text-align-left & {
    }
    .--text-align-center & {
      justify-content: center;
      text-align: center;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 2.5rem;
    @include media-breakpoint-up(lg) {
      gap: 3.75rem;
    }
  }

  &__headline {
  }

  &__text {
  }

  &__buttons {
    .--text-align-left & {
    }
    .--text-align-center & {
      justify-content: center;
      text-align: center;
      gap: 1.5rem;
    }
  }
}

